; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_path-win.c_mp_get_win_shell_dir.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_path-win.c_mp_get_win_shell_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KF_FLAG_CREATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @mp_get_win_shell_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mp_get_win_shell_dir(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* null, i32** %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @KF_FLAG_CREATE, align 4
  %10 = call i32 @SHGetKnownFolderPath(i32 %8, i32 %9, i32* null, i32** %6)
  %11 = call i64 @FAILED(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %21

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call i8* @mp_to_utf8(i8* %15, i32* %16)
  store i8* %17, i8** %7, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @CoTaskMemFree(i32* %18)
  %20 = load i8*, i8** %7, align 8
  store i8* %20, i8** %3, align 8
  br label %21

21:                                               ; preds = %14, %13
  %22 = load i8*, i8** %3, align 8
  ret i8* %22
}

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @SHGetKnownFolderPath(i32, i32, i32*, i32**) #1

declare dso_local i8* @mp_to_utf8(i8*, i32*) #1

declare dso_local i32 @CoTaskMemFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
